Se cambian variables y se agrega composición a otros filtros

--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -210,7 +210,7 @@
 
               <li class="active mt-2">
                 <a href="#filterComposicion" data-toggle="collapse" aria-expanded="false"
-                  class="dropdown-toggle menu-color">Composicion
+                  class="dropdown-toggle menu-color">Composición
                 </a>
                 <ul class="collapse list-unstyled" id="filterComposicion">
                   <div class="overflow-auto container-scroll">
