--- a/src/app/components/informe-categoria/table2/table2.component.html
+++ b/src/app/components/informe-categoria/table2/table2.component.html
@@ -110,15 +110,18 @@
               </li>
 
               <li class="active mt-2">
-                <a href="#filterMaterials" data-toggle="collapse" aria-expanded="false"
+                <a href="#filterComposicion" data-toggle="collapse" aria-expanded="false"
                   class="dropdown-toggle menu-color">Composición
                 </a>
-                <ul class="collapse list-unstyled" id="filterMaterials">
+                <ul class="collapse list-unstyled" id="filterComposicion">
                   <div class="overflow-auto container-scroll">
-                    <li *ngFor="let e of materials">
+                    <li *ngFor="let composicion of composicionData">
                       <label class="control control--checkbox">
-                        <input type="checkbox" class="ml-2" /></label>
-                      {{e.materiales}}
+                        <input class="composicion" type="checkbox" value="{{composicion.value}}" name="{{composicion.value}}"
+                          (change)="validateCheckFilter2($event.target.checked, composicion, $event.target.className, $event.target)"
+                          id="{{composicion.value}}" />
+                        {{composicion.text}}
+                      </label>
                     </li>
                   </div>
                 </ul>
@@ -127,8 +130,8 @@
             </ul>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" (click)="closeModal2()">Cerrar</button>
-            <button type="button" class="btn btn-primary" (click)="applyFilter2()">Aplicar filtros</button>
+            <button type="button" class="btn btn-danger" (click)="clearFilters2()">Limpiar filtros</button>
+            <button type="button" class="btn btn-primary" (click)="closeModal2()">Cerrar</button>
           </div>
         </ng-template>
       </div>
