--- a/src/app/components/informe-categoria/informe-categoria.component.html
+++ b/src/app/components/informe-categoria/informe-categoria.component.html
@@ -95,8 +95,8 @@
       </div>
 
       <div class="input-grid1">
-        <input type="date">
-        <input type="date">
+        <input type="date" [(ngModel)]="inicio" (ngModelChange)="fechaInicio()">
+        <input type="date" [(ngModel)]="fin" (ngModelChange)="fechaFin()">
 
         <!-- filtro de las cards -->
         <svg xmlns="http://www.w3.org/2000/svg" (click)="openModalCards(templateCards)" width="17" heigth="17"
