--- a/src/app/components/productos/general/general.component.html
+++ b/src/app/components/productos/general/general.component.html
@@ -6,8 +6,8 @@
         </div>
 
         <div class="input-grid1">
-            <input type="date">
-            <input type="date">
+            <input type="date" [(ngModel)]="inicio" (ngModelChange)="fechaInicio()">
+            <input type="date" [(ngModel)]="fin" (ngModelChange)="fechaFin()">
 
             <!--
             <input type="date" [(ngModel)]="inicio" (ngModelChange)="fechaInicio()">
