--- a/src/app/components/informes/informe-precio/informe-precio.component.css
+++ b/src/app/components/informes/informe-precio/informe-precio.component.css
@@ -2,21 +2,6 @@
   height: 250px;
 }
 
-.filtersCharts {
-  display: flex;
-  width: 100%;
-}
-
-.filterTable {
-  display: flex;
-  width: auto;
-}
-
-.filterSvgCharts, .filterSvgTable {
-  margin-left: 20px;
-  margin-top: -10px;
-}
-
 .hoverSvgFilter:hover {
   cursor: pointer;
 }
@@ -25,6 +10,42 @@
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 20px;
+}
+
+.titulo-chart {
+  text-align: center;
+}
+
+.titulo-grid {
+  display: grid;
+  grid-template-columns: 95% 5%;
+}
+
+.marginTitle {
+  margin-top: -20px;
+}
+
+.marginCharts {
+  margin-top: -20px;
+}
+
+.marginTable {
+  margin-top: -10px;
+}
+
+.svgChart {
+  margin-top: 7px;
+  margin-left: -60px;
+}
+
+@media screen and (max-width: 600px) {
+  .titulo-chart-grid {
+    display: block;
+  }
+
+  .svgChart {
+    margin-left: 20px;
+  }
 }
 
 .content-filter-item {
@@ -109,10 +130,6 @@ tr:hover td {
 
 .chart-line {
   width: 90%;
-}
-
-.titulo-chart {
-  text-align: center;
 }
 
 /* fin chart */
